@@ -39,6 +39,7 @@
    - ofoTVAForm: fix new record insertion.
    - ofoTVARecord: fix new record insertion.
    - DBModel v0.38: allow BAT_ACC_USER to be NULL.
+   - LCL PDF importer: fix operation year setup (todo #1529).
 
  Other changes:
 
